--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/pengng/wechat-pay#readme",
   "dependencies": {
+    "request": "^2.81.0",
     "request-client": "^1.0.0",
     "xml2js": "^0.4.19"
   }
