--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
-  "name": "wechat-pay-api",
-  "version": "0.0.8",
-  "description": "wechat payment tool package",
-  "main": "index.js",
-  "scripts": {},
-  "keywords": [
-    "wechat",
-    "pay",
-    "h5"
-  ],
-  "author": "pengng",
-  "license": "ISC",
-  "directories": {
-    "lib": "lib"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pengng/wechat-pay-api.git"
-  },
-  "bugs": {
-    "url": "https://github.com/pengng/wechat-pay-api/issues"
-  },
-  "homepage": "https://github.com/pengng/wechat-pay-api#readme",
-  "dependencies": {
-    "request": "^2.81.0",
-    "time-formater": "^1.0.1",
-    "xml2js": "^0.4.19"
-  }
+    "name": "wechat-pay-api",
+    "version": "0.1.0",
+    "description": "微信支付接口",
+    "main": "index.js",
+    "scripts": {},
+    "keywords": [
+        "微信支付",
+        "企业付款",
+        "微信红包",
+        "H5支付",
+        "wechat",
+        "pay",
+        "h5"
+    ],
+    "author": "yupeng.kuo",
+    "license": "ISC",
+    "directories": {
+        "lib": "lib"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/pengng/wechat-pay-api.git"
+    },
+    "bugs": {
+        "url": "https://github.com/pengng/wechat-pay-api/issues"
+    },
+    "homepage": "https://github.com/pengng/wechat-pay-api#readme",
+    "dependencies": {
+        "request": "^2.81.0",
+        "time-formater": "^1.0.1",
+        "xml2js": "^0.4.19"
+    }
 }
